[project]
name = "wild-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # For Win install the CUDA package
    "torch>=2.12.0; sys_platform == 'win32'",
    "torchvision>=0.27.0; sys_platform == 'win32'",

    # For MacOS & Linux/WSL install standard torch package
    "torch>=2.12.0; sys_platform != 'win32'",
    "torchvision>=0.27.0; sys_platform != 'win32'",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]